# XDPGuardian

./: README.md
App Source Code/: CMakeLists.txt  CMakeLists.txt.user.2301186  CMakeLists.txt.user.56c7dc3  CustomBox.qml  Main.qml  NetFilterWin.files  Tag.qml  TagHelper.h  exportimporthelper.cpp  exportimporthelper.h  ipentry.cpp  ipentry.h  logtablemodel.cpp  logtablemodel.h  main.cpp  networkinterfacesmodel.cpp  networkinterfacesmodel.h  resources.qrc  tabipmodel.cpp  tabipmodel.h
App Source Code/.qtc_clangd/: compile_commands.json
App Source Code/.qtc_clangd/.cache/clangd/index/: AddPortPopuP_qml.cpp.652305F0AEACE53E.idx  AddPortPopup_qml.cpp.9975AA9C306CCD68.idx  AnalysisScreen_qml.cpp.7A1F4BA23D8A1451.idx  AnalysisScreen_qml.cpp.C2ECDA343955C44F.idx  CMakeCCompilerId.c.0B99A998A04BC585.idx  CMakeCXXCompilerId.cpp.4F692DEE9464B1F1.idx  CMakeCXXCompilerId.cpp.99B381EA3D74EE36.idx  CustomBox_qml.cpp.11316F6875405084.idx  CustomBox_qml.cpp.F9F5385F971A60EF.idx  CustomMenuItem_qml.cpp.9360B52A67944C31.idx  CustomMenuItem_qml.cpp.E107DE7393694DE5.idx  CustomMenu_qml.cpp.7378A2A1E2D37D6D.idx  CustomMenu_qml.cpp.E91A42DC0F0A651F.idx  EditRulePopup_qml.cpp.42A76E9FB11FDDAD.idx  EditRulePopup_qml.cpp.79D1DB5BE7AFB744.idx  EditRuleSetPopup_qml.cpp.D8E43228CD9B9316.idx  EditRuleSetPopup_qml.cpp.FD520867AAB3912B.idx  LogScreen_qml.cpp.01938CD1A00781B2.idx  LogScreen_qml.cpp.E38ED26628B1004A.idx  MetricsScreen_qml.cpp.04C8284D47E030D8.idx  MetricsScreen_qml.cpp.D63DF4CC96E4D26C.idx  NetFilterWin.config.2E32A2F9BF49B25B.idx  NetworkInterfacesList_qml.cpp.843D5847644FEB82.idx  NetworkInterfacesList_qml.cpp.CF29C07C0A3EF40C.idx  NewRulePopUp_qml.cpp.7EA66B73A55DF9C0.idx  NewRulePopUp_qml.cpp.F9F79EF921957E96.idx  NewRuleSetPopUp_qml.cpp.0DC4402F295B88F2.idx  NewRuleSetPopUp_qml.cpp.6D3AF5FB2AF42647.idx  PacketDistribution_qml.cpp.898EFF2816FAEAF8.idx  PortTag_qml.cpp.18BE34A49EE98315.idx  PortTag_qml.cpp.2B36C682FD30EF3C.idx  ProtChart_qml.cpp.B70B221EE223BB9A.idx  RuleScreen_qml.cpp.96927981D88A806F.idx  RuleScreen_qml.cpp.DB51BDF840C28A10.idx  RuleSetList_qml.cpp.4B703C17205DCACF.idx  RuleSetList_qml.cpp.F61956287276F48A.idx  Style_qml.cpp.1BA48A12C1B64484.idx  Style_qml.cpp.6655A15480B96200.idx  TagHelper.h.531B40371B68E676.idx  TcpFlags_qml.cpp.BF5B00503E152A8E.idx  (+131 more)
App Source Code/CustomComponents/: CustomBox.qml  CustomMenu.qml  CustomMenuItem.qml  PortTag.qml
App Source Code/CustomComponents/AnalysisComponents/: PacketDistribution.qml  ProtChart.qml  TcpFlags.qml  TestComponent.qml  TopPortActivity.qml  TopRules.qml  TopSourceIp.qml
App Source Code/Filter/: analysisfunctions.cpp  analysisfunctions.h  blockedfromfiltermodel.cpp  blockedfromfiltermodel.h  dumpmetricsfunctions.cpp  dumpmetricsfunctions.h  filter.cpp  filteringmanager.cpp  filteringmanager.h  flagmodel.cpp  flagmodel.h  iphitsmodel.cpp  iphitsmodel.h  packet.h  packetdistmodel.cpp  packetdistmodel.h  porthitsmodel.cpp  porthitsmodel.h  protpiemodel.cpp  protpiemodel.h  rule.skel.h  rulehitmodel.cpp  rulehitmodel.h
App Source Code/Network/: interfacemodel.cpp  interfacemodel.h  protocolmodel.cpp  protocolmodel.h  rulemodel.cpp  rulemodel.h  rulesetmodel.cpp  rulesetmodel.h  selectionmanager.cpp  selectionmanager.h  uniqueidprovider.cpp  uniqueidprovider.h
App Source Code/Screens/: AnalysisScreen.qml  LogScreen.qml  MetricsScreen.qml  NetworkInterfacesList.qml  RuleScreen.qml  RuleSetList.qml
App Source Code/Screens/PopUps/: AddPortPopup.qml  EditRulePopup.qml  EditRuleSetPopup.qml  NewRulePopUp.qml  NewRuleSetPopUp.qml
App Source Code/Style/: Style.qml
eBPF FIlter/: rule.bpf.c
